Alterações no form

--- a/cadastro.html
+++ b/cadastro.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form class="box">
+    <form class="box" method="post" action="cadastrando.php">
         <div class="field">
             <label class="label">Placa</label>
             <div class="control">
@@ -35,7 +35,7 @@
                 <input class="input" name="cor">
             </div>
             <label class="label">&nbsp;</label>
-                <input class="button" type="submit" value="Enviar">   
+                <input class="button is-success" type="submit" value="Enviar">   
         </div>
     </form>
 </body>
