--- a/cadastro.html
+++ b/cadastro.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css"/>
     <title>Sistema de Cadastro de carros</title>
+    <link>
 </head>
 
 <body>
